# dp-box-stacking-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  build.sh
.devcontainer/: devcontainer.json
include/: DynamicProgramming.h  dynamic_programming.h
include/dp/: DynamicProgramming.h
src/: DynamicProgramming.cpp  dynamic_programming.cpp  main.cpp
src/dp/: DynamicProgramming.cpp
src/dp/structs/: Box.h
test/: CMakeLists.txt  test.cpp
